[package]
name = "zenutils-apidoc"
version = "0.1.0"
description = "Public-API snapshot test helper: workspace-wide committed API-surface docs with taxonomy summaries and feature-delta sections."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["public-api", "snapshot", "testing", "rustdoc-json", "api-surface"]
categories = ["development-tools::testing"]
# The dogfood snapshot test would make downstream/distro `cargo test` runs
# require rustup + nightly rustdoc; consumers write their own 3-line shim.
exclude = ["tests/"]

[dependencies]
public-api = "0.52.1"
rustdoc-json = "0.9.10"
rustup-toolchain = "0.1.10"
serde_json = "1.0.150"

[lints]
workspace = true
