[package]
name = "zenutils-apidoc"
version = "0.1.1"
description = "Public-API snapshot test helper: workspace-wide committed API-surface docs with taxonomy summaries and feature-delta sections."
edition.workspace = true
# 1.88 (not the workspace 1.85 floor): cargo_metadata 0.23.1 declares 1.86,
# and public-api 0.52.1 uses let-chains (stable since 1.88) without
# declaring an MSRV — 1.88 is the verified-compiling minimum.
rust-version = "1.88"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["public-api", "snapshot", "testing", "rustdoc-json", "api-surface"]
categories = ["development-tools::testing"]
# The dogfood snapshot test would make downstream/distro `cargo test` runs
# require rustup + nightly rustdoc; consumers write their own 3-line shim.
exclude = ["tests/"]

[dependencies]
public-api = "0.52.1"
rustdoc-json = "0.9.10"
rustup-toolchain = "0.1.10"
serde_json = "1.0.150"

[lints]
workspace = true
